# palss

./: .gitignore  CMakeLists.txt  README.md  anchor.hpp  clean_augmented_gfa.py  cluster.hpp  cluster.py  cluster2.py  create_clusters.sh  format_vcf.py  gaf.cpp  gaf.hpp  graph.c  graph.cpp  graph.h  graph.hpp  gsketch.cpp  gsketch.hpp  kmer.c  kmer.cpp  kmer.h  kmer.hpp  main.c  main.cpp  main_align.cpp  main_anchor.cpp  main_augment.cpp  main_call.cpp  main_chreads.cpp  main_dist.cpp  main_dump.c  main_dump.cpp  main_extract.cpp  main_index.cpp  main_kan.c  main_kan.cpp  main_map.cpp  main_realign.cpp  main_sam.cpp  main_search.c  (+29 more)
example/: graph.gbz  graph.gfa  graph.vg  reads.fa  reads.fq  reference.gfa
exps/: README.md  Snakefile  align_to_graphs.sh  anchors_analysis.smk  anchors_analysys.smk  augment.smk  eval_hifiasm.smk  palss.smk  prepare_data.sh  real.smk  simulate_sample.sh  sketch_analysis.smk  update_analysis.smk
exps/config/: config.yaml  config.yml
exps/envs/: bcftools.yml  bedtools.yaml  bedtools.yml  biopython.yaml  biopython.yml  bwa.yaml  dipcall.yml  graphaligner.yaml  happy.yml  hifiasm.yml  intervaltree.yaml  pbsim3.yaml  pbsim3.yml  pysam.yaml  refine.yaml  sniffles.yml  vg.yml
exps/plots/: compare_nms.py  plot_anchoring.py  plot_correcteness.py  plot_nm.py  plot_support.py
exps/recombseq/: anchors_analysis.smk  run_mgcactus.sh
exps/recombseq/envs/: hifiasm.yml  minigraph.yml  vg.yml
exps/recombseq/scripts/: exp1_plot.py  plot_recall.py  remove_duplicates.py  remove_n.py
exps/rules/: analyses.smk  analyze.smk  downstream.smk  mgc.smk  nm.smk  palss.smk  prepare_data.smk  support.smk
exps/scripts/: analyze.py  analyze_bad_alignments.py  check_neighbours.py  check_uncovered_regions.py  compare_gafs.py  extract_graph.sh  format_happy.py  get_contigs.py  get_precision.py  get_recall.py  kan_hist.py  kan_post.py  kan_post.single.py  plot_af.py  plot_contigs.py  plot_nm.py  plot_precision.py  plot_recall.py  ran_hist.py  remove_duplicates.py  remove_n.py  remove_sample.py  remove_samples.py  run_happy.sh  run_truvari.sh
exps/utils/: eval_anchoring.py  evaluate_bams.py  extract_subgraph  extract_subgraph.cpp  flag_vertices.py  get_correctness.py  get_nm.py  get_support.py  remove_n.py  run_mgcactus.sh  split_haplotypes.py
exps/workflow/: Snakefile
exps/workflow/envs/: biopython.yml  css.yml  cutesv.yml  dipcall.yml  graphaligner.yml  minimap2.yml  samtools.yml  seaborn.yml  sniffles.yml  svimasm.yml  truvari.yml  vg.yml
exps/workflow/rules/: analysis.smk  callers-asm.smk  callers.smk  gal.smk  pansv.smk  simulation.smk
scripts/: add_cs.cpp  augment.sh  augment_hard.sh  augment_medium.sh  augment_simple.sh  clean.py  clean_augment.py  clean_augmented_gfa.py  clean_gfa.py  clean_ununsed.py  convert.py  filter_gaf.py  format_vcf.py  kan2sam.py  kan_hist.py  post.py  ran_hist.py  refine.py  refine_augmentation.sh  remove_low_supported_vertices.py  remove_redundant_bubbles.py  select_consensus.py  subfa.py
utils/: Makefile  README.md  extract_subgraph.c  test.gfa
